
Changes from jTDS 0.4
=======================

10/29/2002 - Alin Sinpalean

 o Fixed CursorResultSet.next(): position was not incremented/decremented
   (probably since my last update). Anyway, correct position reporting will not
   work correctly in all cases until the sp_cursorXXX procedures are used
   instead of the current CREATE CURSOR/FETCH NEXT/FETCH PREVIOUS statements.

10/26/2002 - Alin Sinpalean

 o Fixed bug #629022 (also signaled in a post in the jTDS Help forum):
   DatabaseMetaData.getColumns() did not work if null was supplied as schema or
   table name. This was because a query was used to retrieve this information.
   Now sp_columns is used. This brings up another tiny issue: type numbers are
   wrong (e.g. -9 for NVARCHAR; it should be -1111 == unknown) but I guess it's
   not that bad.

10/23/2002 - Alin Sinpalean

 o Tiny change in CallableStatement_base constructor where the procedure name
   was parsed: periods were not considered to be part of a procedure name, so
   if a procedure name also containing catalog and/or schema was provided, only
   the first part of the name (up until the first period) was considered to be
   the procedure name. This meant that the schema or catalog was used as
   procedure name.

10/22/2002 - Alin Sinpalean

 o Implemented correctly the DatabaseMetaData methods getNumericFunctions,
   getStringFunctions and getSystemFunctions and added the corresponding code
   to EscapeProcessor (to convert the standard function names to SQL Server-
   specific function names -- I sure hope it works with Sybase, too as I have
   no way of testing this).
 o Implemented TdsStatement methods get/setFetchSize and get/setFetchDirection.

10/21/2002 - Alin Sinpalean

 o Fix in Tds.executeProcedure() if a Boolean was supplied as value for a
   parameter of type CHAR/VARCHAR, it crashed with a type cast exception. This
   should be checked when selecting the procedure, anyway (i.e. also check that